# nginx_fastapi_react_example

./: README.md  docker-compose.yml  nginx.conf
backend/: Dockerfile  pyproject.toml
backend/backend/: main.py
frontend/: Dockerfile
frontend/src/: App.tsx
