[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Philipp Schroeppel <'69214052+pns1123@users.noreply.github.com'>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
